[gd_scene load_steps=4 format=3 uid="uid://d4wq2s3y0m2hc"]

[ext_resource type="Script" path="res://scripts/hud/hud_commit_widget.gd" id="1"]
[ext_resource type="Script" path="res://scripts/hud/beep_player.gd" id="2"]
[ext_resource type="Script" path="res://scripts/hud/commit_ring.gd" id="3"]

[sub_resource type="Gradient" id="Gradient_1"]
offsets = PackedFloat32Array(0, 0.65, 1)
colors = PackedColorArray(0.137255, 0.137255, 0.137255, 0.95, 0.137255, 0.137255, 0.137255, 0.95, 0, 0, 0, 0)

[node name="HUDCommitWidget" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Top" type="VBoxContainer" parent="Root"]
anchors_preset = 2
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -240.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 140.0
alignment = 1

[node name="PhaseLabel" type="Label" parent="Root/Top"]
text = "PHASE: IDLE"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="Root/Top"]
text = "Tap COMMIT during TELEGRAPH"
horizontal_alignment = 1

[node name="CommitRing" type="Control" parent="Root"]
anchors_preset = 10
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -340.0
offset_right = -40.0
offset_bottom = -80.0
script = ExtResource("3")

[node name="CommitButton" type="Button" parent="Root"]
anchors_preset = 10
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -320.0
offset_right = -60.0
offset_bottom = -100.0
text = "COMMIT"

[node name="LockFlash" type="ColorRect" parent="Root"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 1, 0.4, 0)

[node name="Beep" type="Node" parent="Root"]
script = ExtResource("2")
